[gd_scene load_steps=11 format=3 uid="uid://7an1chj35h8t"]

[ext_resource type="Texture2D" uid="uid://cmao7hqvyok12" path="res://assets/main_ship/weapons/Main Ship - Weapons - Auto Cannon.png" id="1_kbdd7"]
[ext_resource type="Script" path="res://scripts/auto_cannon.gd" id="2_fjllc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_w15qa"]
atlas = ExtResource("1_kbdd7")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vtymo"]
atlas = ExtResource("1_kbdd7")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_q6ru8"]
atlas = ExtResource("1_kbdd7")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_x27tl"]
atlas = ExtResource("1_kbdd7")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_x782r"]
atlas = ExtResource("1_kbdd7")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jfq40"]
atlas = ExtResource("1_kbdd7")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jcaf3"]
atlas = ExtResource("1_kbdd7")
region = Rect2(0, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_debqu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w15qa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vtymo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6ru8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x27tl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x782r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jfq40")
}],
"loop": false,
"name": &"firing",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jcaf3")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}]

[node name="AutoCannon" type="AnimatedSprite2D"]
z_index = -1
sprite_frames = SubResource("SpriteFrames_debqu")
animation = &"firing"
script = ExtResource("2_fjllc")

[node name="ProjectileSource1" type="Marker2D" parent="."]
position = Vector2(-9, -8)
gizmo_extents = 4.0

[node name="ProjectileSource2" type="Marker2D" parent="."]
position = Vector2(9, -8)
gizmo_extents = 4.0

[node name="Cooldown" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="." to="." method="_on_animation_finished"]
[connection signal="timeout" from="Cooldown" to="." method="_on_cooldown_timeout"]
